2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/shoes.shp: shoes paperdoll art
	* data/bg/triple_xbow.shp: triple crossbow paperdoll art
	* data/bg/musket_ammo.shp: musket ammo paperdoll art (by WishStone)

2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/AudioOptions_gump.cc: only display midi settings when relevant
	* audio/Midi.cc: label music player id output

2004-02-11 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/docs.xml: updated and added screenshots
	* docs/images/docs*.png added
	* docs/readme.html: updated and added screenshots
	* Readme updated

2004-02-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/hawk.shp: hawk paperdoll art
	* gumps/Paperdoll_gump.cc: fixed dropping items in BG belt slots

2004-02-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/death_scythe.shp: death scythe paperdoll art
	* data/bg/firewand.shp: fire wand paperdoll art
	* data/bg/knife.shp: knife paperdoll art
	* data/bg/starburst.shp: starburst paperdoll art (belt-only)
	* data/bg/hawk.shp: hawk paperdoll art

2004-02-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: rotate colours 0xFC-0xFE (Juggernaut Hammer)

2004-02-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* cheat.cc: move dead bodies to avatar before resurrecting them

2004-02-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: add empty install-exec-local target if not on Mac OS X
	* configure.ac: add extra X11 include directory on freebsd
	* Makefile.am: distribute autogen.sh

2004-02-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/exult_studio.xml: converted JPGs to PNGs
	* docs/exult_studio.html: converted JPGs to PNGs
	* docs/images/*.jpg removed, *.png added instead
	* docs/xml/faq.xml: eliminated another jpg
	* docs/faq.html, readme.html: updated
	* ReadMe, FAQ: updated
