@@ -37,3 +37,4 @@ hawk.shp
 musket_ammo.shp
 shoes.shp
 triple_xbow.shp
+pants.shp
