@@ -1,3 +1,6 @@
+2004-02-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* data/bg/pants.shp: pants paperdoll art (by servus)
+
 2004-02-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* data/bg/shoes.shp: shoes paperdoll art
 	* data/bg/triple_xbow.shp: triple crossbow paperdoll art
